# trading-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
src/core/: bar.h
src/data/: csv_loader.cpp  csv_loader.h
src/functions/: time_weighted_moving_average.cpp  time_weighted_moving_average.h
src/metrics/: calculate_equity_curve.cpp  calculate_equity_curve.h  drawdown.cpp  drawdown.h  moving_average.cpp  moving_average.h  return_metrics.cpp  return_metrics.h
tests/: csv_loader_test.cpp  drawdown_test.cpp  return_metrics_test.cpp  twma_test.cpp  vwma_test.cpp
tests/data/: sample.csv
